[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "myquantlab"
dynamic = ["version"]
description = "A collection of tools for quantitative finance."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Etienne Charlier", email = "github@procurasia.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'numpy', 'pandas', 'scipy', 'scikit-learn', 'statsmodels', 'matplotlib', 'bokeh', 'eccore']

[project.urls]
Repository = "https://github.com/vtecftwy/myquantlab"
Documentation = "https://vtecftwy.github.io/myquantlab"

[project.entry-points.nbdev]
myquantlab = "myquantlab._modidx:d"

[project.optional-dependencies]
dev = ['nbdev']

[tool.setuptools.dynamic]
version = {attr = "myquantlab.__version__"}

[tool.setuptools.packages.find]
include = ["myquantlab"]

[tool.nbdev]
nbs_path = 'nbs-dev'
